--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "canvas": "^2.6.1",
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.1.0",
     "merge-images": "^2.0.0",
     "moment": "^2.26.0",
