--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "merge-images": "^2.0.0",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
+    "mongoose": "^5.9.19",
     "node-fetch": "^2.6.0",
     "text-table": "^0.2.0"
   }
