--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r dotenv/config index.js"
+    "start": "node index.js",
+    "dev": "node -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "axios": "^0.19.2",
     "canvas": "^2.6.1",
     "discord.js": "^12.2.0",
+    "docker-secret": "^1.1.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.1.0",
     "merge-images": "^2.0.0",
