--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # volumes used by docker
 /volumes
 
+# Test data 
 /testdata
 
 /node_modules
@@ -32,6 +33,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# Virtual environment
+venv/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
