Fully ported to python and running wuth docker

--- a/.env-template
+++ b/.env-template
@@ -1,9 +1,11 @@
 PREFIX=
+PYTHON_ENV=
+TEST_DATA=
 DISCORD_TOKEN=
-CR_API_URL=
-CR_API_TOKEN=
-MOMENT_LOCALE=
-TIME_ZONE=
-MOMENT_DATETIME_FORMAT=
-DB_URI=
+DB_HOST=
+DB_PORT=
+DB_USER=
 DB_NAME=
+DB_USER_PASS=
+CR_API_TOKEN=
+CR_API_URL=
