--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,35 @@
 aiohttp==3.6.2
 APScheduler==3.6.3
+astroid==2.4.2
 async-timeout==3.0.1
 attrs==19.3.0
 certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.3
-discord.py==1.4.1
+discord==1.0.1
+discord.py==1.3.4
 environs==8.0.0
+get-docker-secret==1.0.1
 idna==2.10
-marshmallow==3.7.1
+isort==4.3.21
+lazy-object-proxy==1.4.3
+marshmallow==3.6.1
+mccabe==0.6.1
 mongoengine==0.20.0
 multidict==4.7.6
 Pillow==7.2.0
-pymongo==3.11.0
+pylint==2.5.3
+pymongo==3.10.1
 python-dateutil==2.8.1
-python-dispatch==0.1.31
+python-dispatch==0.1.2
 python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
 tabulate==0.8.7
+toml==0.10.1
 tzlocal==2.1
-urllib3==1.25.10
-yarl==1.5.1
+urllib3==1.25.9
+websockets==8.1
+wrapt==1.12.1
+yarl==1.4.2
